src/opengl/qglpaintdevice.cpp
@@ -44,6 +44,7 @@
 #include <private/qglpixelbuffer_p.h>
 #include <private/qglframebufferobject_p.h>
 #include <qopenglfunctions.h>
+#include <qwindow.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -188,7 +189,12 @@ void QGLWidgetGLPaintDevice::endPaint()
 
 QSize QGLWidgetGLPaintDevice::size() const
 {
+#ifdef Q_OS_MAC
+    return glWidget->size() * (glWidget->windowHandle() ?
+                               glWidget->windowHandle()->devicePixelRatio() : qApp->devicePixelRatio());
+#else
     return glWidget->size();
+#endif
 }
 
 QGLContext* QGLWidgetGLPaintDevice::context() const
